--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "handlebars",
   "description": "Handlebars template engine for Node",
-  "version": "1.0.beta.2",
+  "version": "1.0.0beta2",
   "homepage": "https://github.com/wycats/handlebars.js",
   "author": "Yehuda Katz",
   "directories": {
