Add main target to packageinfo

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "optimist": "~0.2"
   },
   "devDependencies": {},
+  "main": "lib/handlebars.js",
   "bin": {
     "handlebars": "bin/handlebars"
   }
