--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "handlebars",
   "description": "Extension of the Mustache logicless template language",
-  "version": "1.0.4beta",
+  "version": "1.0.5beta",
   "homepage": "http://www.handlebarsjs.com/",
-  "keywords": "handlebars mustache template html",
+  "keywords": [
+    "handlebars mustache template html"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/kpdecker/handlebars.js.git"
@@ -12,8 +14,8 @@
     "node": ">=0.4.7"
   },
   "dependencies": {
-      "optimist": "~0.3",
-      "uglify-js": "~1.2"
+    "optimist": "~0.3",
+    "uglify-js": "~1.2"
   },
   "devDependencies": {},
   "main": "lib/handlebars.js",
