Use suite rather than module for module decl

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,9 @@
         "ember_deprecate",
         "ember_deprecateFunc",
         "require",
+        "suite",
         "equal",
+        "equals",
         "test",
         "testBoth",
         "raises",
