Further progress towards modularization.
At this point, I have only 2 fails in the Node build, but I'm doing a
bunch of manual stuff locally and still have a bunch of hacks.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-hang": "~0.1.2",
-    "grunt-es6-module-transpiler": "~0.4.1"
+    "grunt-es6-module-transpiler": "~0.4.1",
+    "es6-module-transpiler": "*",
+    "jison": "~0.3.0",
+    "mocha": "*",
+    "should": "~1.2.2"
   }
 }
