Add jshint to grunt exec

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dust": "~0.3",
     "grunt": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.2",
     "jison": "~0.3",
     "mocha": "*",
