--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "uglify-js": "~2.3"
   },
   "devDependencies": {
+    "async": "~0.2.9",
     "benchmark": "~1.0",
     "dust": "~0.3",
     "grunt": "~0.4.1",
@@ -30,7 +31,9 @@
     "jison": "~0.3",
     "mocha": "*",
     "mustache": "~0.7.2",
-    "should": "~1.2.2"
+    "semver": "~2.1.0",
+    "should": "~1.2.2",
+    "underscore": "~1.5.1"
   },
   "main": "lib/handlebars.js",
   "bin": {
