--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.2",
     "jison": "~0.3",
+    "keen.io": "0.0.3",
     "mocha": "*",
     "mustache": "~0.7.2",
     "semver": "~2.1.0",
