new gruntfile, package.json; moving stuff under tasks

--- a/.jshintrc
+++ b/.jshintrc
@@ -22,9 +22,15 @@
         "ok",
         "strictEqual",
         "module",
-
+        "shouldCompileTo",
+        "shouldCompileToWithPartials",
+        "CompilerContext",
+        "compileWithPartials",
         "describe",
         "it",
+        "before",
+        "beforeEach",
+        "should",
         "afterEach"
     ],
 
