--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
     "async": "~0.2.9",
     "aws-sdk": "~1.5.0",
     "benchmark": "~1.0",
-    "dustjs-linkedin": "~2.0.2",
-    "eco": "~1.1.0-rc-3",
     "grunt": "~0.4.1",
-    "connect": "~2.7.4",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-hang": "~0.1.2",
+    "grunt-mocha-phantomjs": "~0.3.0",
+    "grunt-mocha-test": "~0.5.0",
     "grunt-es6-module-transpiler": "~0.4.1",
-    "es6-module-transpiler": "*",
     "jison": "~0.3.0",
     "keen.io": "0.0.3",
     "mocha": "*",
-    "mustache": "~0.7.2",
     "semver": "~2.1.0",
     "should": "~1.2.2",
-    "underscore": "~1.5.1"
+    "glob": "~3.2.1",
+    "load-grunt-tasks": "~0.1.0"
   },
   "main": "lib/handlebars.js",
   "bin": {
     "handlebars": "bin/handlebars"
   },
   "scripts": {
-    "test": "node ./spec/env/runner"
-  },
-  "optionalDependencies": {}
+    "start": "grunt server",
+    "build": "grunt build",
+    "test": "grunt test",
+    "tests": "node ./spec/env/runner"
+  }
 }
