Generate dist file using es6-module-packager

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-hang": "~0.1.2",
-    "grunt-es6-module-transpiler": "~0.4.1",
-    "es6-module-transpiler": "*",
+    "grunt-es6-module-transpiler": "joefiorini/grunt-es6-module-transpiler",
+    "es6-module-packager": "*",
     "jison": "~0.3.0",
     "keen.io": "0.0.3",
     "mocha": "*",
