--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-hang": "~0.1.2",
