Force rebuild on publish

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "handlebars": "bin/handlebars"
   },
   "scripts": {
+    "prepublish": "grunt",
     "test": "node ./spec/env/runner"
   }
 }
