Create release grunt task
Allows for tests to be run slightly faster when developing locally.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - npm install -g grunt-cli
 
 script:
-  - grunt --stack build metrics publish:latest
+  - grunt --stack default metrics publish:latest
 
 email:
   on_failure: change
