Adds browser tests:
- new grunt task `mocha-test` that will run tests using phantomjs
- new grunt task 'server` that will start local server up
  (you can then open http://localhost:8000/spec to run unit tests
  in your browser)
- new grunt task `watch` to watch file changes and run build again
- changed tokenizer tests: `match_tokens` and `be_token` are
  separate functions now to avoid `node` vs. `browser` vs. `phantomjs`
  shenanigans

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "Yehuda Katz",
   "license": "BSD",
   "readmeFilename": "README.md",
-
   "engines": {
     "node": ">=0.4.7"
   },
@@ -35,6 +34,7 @@
     "eco": "~1.1.0-rc-3",
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-watch": "~0.4.4",
     "grunt-contrib-jshint": "~0.6.3",
@@ -48,9 +48,9 @@
     "mustache": "~0.7.2",
     "semver": "~2.1.0",
     "should": "~1.2.2",
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "grunt-mocha-phantomjs": "~0.3.0"
   },
-
   "main": "lib/index.js",
   "bin": {
     "handlebars": "bin/handlebars"
