Move component definitions into sub directory

--- a/components/bower.json
+++ b/components/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "handlebars.js",
   "version": "1.0.0",
-  "main": "dist/handlebars.js",
+  "main": "handlebars.js",
   "ignore": [
     "node_modules",
     "components"
