--- a/components/bower.json
+++ b/components/bower.json
@@ -1,9 +1,6 @@
 {
-  "name": "handlebars.js",
+  "name": "handlebars",
   "version": "1.1.0",
   "main": "handlebars.js",
-  "ignore": [
-    "node_modules",
-    "components"
-  ]
+  "dependencies": {}
 }
