local grunt-cli

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "mustache": "~0.7.2",
     "semver": "~2.1.0",
     "should": "~1.2.2",
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "grunt-cli": "~0.1.10"
   },
   "main": "lib/index.js",
   "bin": {
