Use module packager for all transpile tasks

--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-es6-module-transpiler": "joefiorini/grunt-es6-module-transpiler",
-    "es6-module-packager": "*",
+    "es6-module-packager": "~0.1.1",
     "jison": "~0.3.0",
     "keen.io": "0.0.3",
     "mocha": "*",
