--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "grunt-cli": "~0.1.10",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
+    "grunt-saucelabs": "~4.1.2",
     "es6-module-packager": "0.x",
     "jison": "~0.3.0",
     "keen.io": "0.0.3",
