--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-saucelabs": "~4.1.2",
     "es6-module-packager": "0.x",
     "jison": "~0.3.0",
