Set laxbreak jshint flag

--- a/.jshintrc
+++ b/.jshintrc
@@ -35,7 +35,7 @@
     "evil": true,
     "forin": false,
     "immed": false,
-    "laxbreak": false,
+    "laxbreak": true,
     "newcap": true,
     "noarg": true,
     "noempty": false,
