--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-saucelabs": "~5.0.1",
+    "grunt-saucelabs": "8.x",
     "es6-module-packager": "1.x",
     "jison": "~0.3.0",
     "keen.io": "0.0.3",
