Add istanbul code coverage

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "benchmark": "~1.0",
     "dustjs-linkedin": "~2.0.2",
     "eco": "~1.1.0-rc-3",
+    "es6-module-packager": "1.x",
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.10",
     "grunt-contrib-clean": "~0.4.1",
@@ -43,7 +44,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-saucelabs": "8.x",
-    "es6-module-packager": "1.x",
+    "istanbul": "^0.3.0",
     "jison": "~0.3.0",
     "keen.io": "0.0.3",
     "mocha": "~1.20.0",
