--- a/package.json
+++ b/package.json
@@ -58,5 +58,10 @@
   },
   "scripts": {
     "test": "grunt"
+  },
+  "jspm": {
+    "main": "handlebars",
+    "directories": { "lib": "dist/amd" },
+    "buildConfig": { "minify": true }
   }
 }
