--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "handlebars",
   "barename": "handlebars",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Handlebars provides the power necessary to let you build semantic templates effectively with no frustration",
   "homepage": "http://www.handlebarsjs.com/",
   "keywords": [
@@ -62,7 +62,11 @@
   },
   "jspm": {
     "main": "handlebars",
-    "directories": { "lib": "dist/amd" },
-    "buildConfig": { "minify": true }
+    "directories": {
+      "lib": "dist/amd"
+    },
+    "buildConfig": {
+      "minify": true
+    }
   }
 }
