Add full support for es6
Converts the tool chain to use babel, eslint, and webpack vs. the previous proprietary solutions.

Additionally begins enforcing additional linting concerns as well as updates the code to reflect these rules.

Fixes #855
Fixes #993

--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "devDependencies": {
     "async": "^0.9.0",
     "aws-sdk": "~1.5.0",
+    "babel-loader": "^5.0.0",
+    "babel-runtime": "^5.1.10",
     "benchmark": "~1.0",
     "dustjs-linkedin": "^2.0.2",
     "eco": "~1.1.0-rc-3",
-    "es6-module-packager": "^2.0.0",
     "grunt": "~0.4.1",
+    "grunt-babel": "^5.0.0",
     "grunt-cli": "~0.1.10",
     "grunt-contrib-clean": "0.x",
     "grunt-contrib-concat": "0.x",
@@ -44,7 +46,9 @@
     "grunt-contrib-requirejs": "0.x",
     "grunt-contrib-uglify": "0.x",
     "grunt-contrib-watch": "0.x",
+    "grunt-eslint": "^11.0.0",
     "grunt-saucelabs": "8.x",
+    "grunt-webpack": "^1.0.8",
     "istanbul": "^0.3.0",
     "jison": "~0.3.0",
     "keen.io": "0.0.3",
