Enable additional es6 features in eslint

--- a/spec/.eslintrc
+++ b/spec/.eslintrc
@@ -29,6 +29,8 @@
   },
   "rules": {
     // Disabling for tests, for now.
-    "no-path-concat": 0
+    "no-path-concat": 0,
+
+    "no-var": 0
   }
 }
