--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,18 @@
     "node": true
   },
   "ecmaFeatures": {
-    "modules": true
+    // Enabling features that can be implemented without polyfills. Want to avoid polyfills at this time.
+    "arrowFunctions": true,
+    "blockBindings": true,
+    "defaultParams": true,
+    "destructuring": true,
+    "modules": true,
+    "objectLiteralComputedProperties": true,
+    "objectLiteralDuplicateProperties": true,
+    "objectLiteralShorthandMethods": true,
+    "objectLiteralShorthandProperties": true,
+    "spread": true,
+    "templateStrings": true
   },
   "rules": {
     // Possible Errors //
@@ -181,6 +192,8 @@
     "space-return-throw-case": 2,
     "space-unary-ops": 2,
     "spaced-line-comment": 2,
-    "wrap-regex": 1
+    "wrap-regex": 1,
+
+    "no-var": 1
   }
 }
