Add rest params to es6 supported list

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "objectLiteralDuplicateProperties": true,
     "objectLiteralShorthandMethods": true,
     "objectLiteralShorthandProperties": true,
+    "restParams": true,
     "spread": true,
     "templateStrings": true
   },
