--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   "dependencies": {
     "async": "^1.4.0",
     "optimist": "^0.6.1",
-    "source-map": "^0.1.40"
+    "source-map": "^0.4.4"
   },
   "optionalDependencies": {
     "uglify-js": "~2.4"
   },
   "devDependencies": {
     "async": "^1.4.2",
-    "aws-sdk": "~1.5.0",
+    "aws-sdk": "^2.1.49",
     "babel-loader": "^5.0.0",
     "babel-runtime": "^5.1.10",
     "benchmark": "~1.0",
@@ -53,8 +53,8 @@
     "jison": "~0.3.0",
     "mocha": "~1.20.0",
     "mock-stdin": "^0.3.0",
-    "mustache": "0.x",
-    "semver": "^4.0.0",
+    "mustache": "^2.1.3",
+    "semver": "^5.0.1",
     "underscore": "^1.5.1"
   },
   "main": "lib/index.js",
