--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "source-map": "^0.1.40"
   },
   "optionalDependencies": {
-    "uglify-js": "~2.6"
+    "uglify-js": "^2.6"
   },
   "devDependencies": {
     "async": "^0.9.0",
