--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "mock-stdin": "^0.3.0",
     "mustache": "^2.1.3",
     "semver": "^5.0.1",
-    "underscore": "^1.5.1"
+    "underscore": "^1.5.1",
+    "webpack": "^1.12.6",
+    "webpack-dev-server": "^1.12.1"
   },
   "main": "lib/index.js",
   "bin": {
