--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "grunt-eslint": "^17.1.0",
     "grunt-saucelabs": "8.x",
     "grunt-webpack": "^1.0.8",
-    "istanbul": "^0.3.0",
+    "istanbul": "github:kpdecker/istanbul",
     "jison": "~0.3.0",
     "mocha": "~1.20.0",
     "mock-stdin": "^0.3.0",
