--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "author": "Yehuda Katz",
   "license": "MIT",
-  "readmeFilename": "README.md",
+  "readmeFilename": "README.markdown",
   "engines": {
     "node": ">=0.4.7"
   },
