CLI -w, --watch option: Added a watch option to the handlebars CLI, which watches for changes on the input file(s)/dir(s), and performs reprecompilation on changes to them, I used the 'chokidar' package for watching files and dirs, and the 'color' package for outputing nice looking messages to the console.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "async": "^1.4.0",
+    "chokidar": "^1.6.1",
+    "colors": "^1.1.2",
     "source-map": "^0.4.4",
     "yargs": "^3.32.0"
   },
