--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
-# Handlebars templates in test cases
+# Handlebars-template fixtures in test cases need deterministic eol
 *.handlebars text eol=lf
+*.hbs text eol=lf
 
-# Lexer files
+# Lexer files as well
 *.l text eol=lf
