--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.1.49",
-    "babel-loader": "^5.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-runtime": "^5.1.10",
     "benchmark": "~1.0",
     "dustjs-linkedin": "^2.0.2",
     "eco": "~1.1.0-rc-3",
     "grunt": "~0.4.1",
-    "grunt-babel": "^5.0.0",
+    "grunt-babel": "^7.0.0",
     "grunt-cli": "~0.1.10",
     "grunt-contrib-clean": "0.x",
     "grunt-contrib-concat": "0.x",
@@ -47,7 +49,7 @@
     "grunt-contrib-watch": "0.x",
     "grunt-eslint": "^20.1.0",
     "grunt-saucelabs": "8.x",
-    "grunt-webpack": "^1.0.8",
+    "grunt-webpack": "^3.0.2",
     "istanbul": "^0.3.0",
     "jison": "~0.3.0",
     "mocha": "~1.20.0",
@@ -55,8 +57,8 @@
     "mustache": "^2.1.3",
     "semver": "^5.0.1",
     "underscore": "^1.5.1",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "main": "lib/index.js",
   "bin": {
