--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "node": ">=0.4.7"
   },
   "dependencies": {
-    "async": "^2.5.0",
+    "neo-async": "^2.5.0",
     "source-map": "^0.6.1",
     "yargs": "^3.32.0"
   },
