--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "benchmark": "~1.0",
     "dustjs-linkedin": "^2.0.2",
     "eco": "~1.1.0-rc-3",
-    "grunt": "~0.4.1",
+    "grunt": "^1.0.3",
     "grunt-babel": "^5.0.0",
     "grunt-cli": "~0.1.10",
     "grunt-contrib-clean": "0.x",
@@ -44,13 +44,13 @@
     "grunt-contrib-copy": "0.x",
     "grunt-contrib-requirejs": "0.x",
     "grunt-contrib-uglify": "0.x",
-    "grunt-contrib-watch": "0.x",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^20.1.0",
     "grunt-saucelabs": "8.x",
     "grunt-webpack": "^1.0.8",
     "istanbul": "^0.3.0",
     "jison": "~0.3.0",
-    "mocha": "~1.20.0",
+    "mocha": "^5",
     "mock-stdin": "^0.3.0",
     "mustache": "^2.1.3",
     "semver": "^5.0.1",
