--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "eco": "~1.1.0-rc-3",
     "grunt": "^1.0.3",
     "grunt-babel": "^5.0.0",
-    "grunt-cli": "~0.1.10",
-    "grunt-contrib-clean": "0.x",
-    "grunt-contrib-concat": "0.x",
-    "grunt-contrib-connect": "0.x",
-    "grunt-contrib-copy": "0.x",
-    "grunt-contrib-requirejs": "0.x",
-    "grunt-contrib-uglify": "0.x",
+    "grunt-cli": "^1",
+    "grunt-contrib-clean": "^1",
+    "grunt-contrib-concat": "^1",
+    "grunt-contrib-connect": "^1",
+    "grunt-contrib-copy": "^1",
+    "grunt-contrib-requirejs": "^1",
+    "grunt-contrib-uglify": "^1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^20.1.0",
     "grunt-saucelabs": "8.x",
