--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "mocha": "~1.20.0",
     "mustache": "0.x",
     "semver": "^4.0.0",
-    "underscore": "^1.5.1"
+    "underscore": "^1.5.1",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   },
   "main": "lib/index.js",
   "bin": {
