--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 before_install:
-- npm install -g grunt-cli@0.4
+- npm install -g grunt-cli
 script:
 - grunt --stack travis
 email:
