--- a/components/package.json
+++ b/components/package.json
@@ -1,5 +1,6 @@
 {
-  "version": "4.0.11",
+  "name": "handlebars",
+  "version": "4.0.12",
   "license": "MIT",
   "jspm": {
     "main": "handlebars",
