chore: bump components/handlebars.js versions to 5.0.0-alpha.1

--- a/components/bower.json
+++ b/components/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "handlebars",
-  "version": "4.0.12",
+  "version": "5.0.0-alpha.1",
   "main": "handlebars.js",
   "license": "MIT",
   "dependencies": {}
