added browser to package.json, resolves #1102

--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
   },
   "main": "lib/index.js",
   "types": "types/index.d.ts",
+  "browser": {
+    ".": "./dist/handlebars.min.js",
+    "./runtime": "./dist/handlebars.runtime.min.js"
+  },
   "bin": {
     "handlebars": "bin/handlebars"
   },
