--- a/components/bower.json
+++ b/components/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "handlebars",
-  "version": "4.1.2",
+  "version": "4.1.2-0",
   "main": "handlebars.js",
   "license": "MIT",
   "dependencies": {}
