--- a/components/package.json
+++ b/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handlebars",
-  "version": "4.1.2",
+  "version": "4.1.2-0",
   "license": "MIT",
   "jspm": {
     "main": "handlebars",
