test: add fluent API for testing Handlebars
use "expectTemplate(template)....toCompileTo(output)"

--- a/spec/.eslintrc
+++ b/spec/.eslintrc
@@ -13,6 +13,7 @@
     "shouldCompileTo": true,
     "shouldCompileToWithPartials": true,
     "shouldThrow": true,
+    "expectTemplate": true,
     "compileWithPartials": true,
     "console": true,
     "require": true,
