--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mock-stdin": "^0.3.0",
     "mustache": "^2.1.3",
     "semver": "^5.0.1",
+    "sinon": "^7.5.0",
     "typescript": "^3.4.3",
     "underscore": "^1.5.1",
     "webpack": "^1.12.6",
