test: add sinon as global variable to eslint in the specs

--- a/spec/.eslintrc
+++ b/spec/.eslintrc
@@ -27,6 +27,7 @@
     "start": true,
     "stop": true,
     "ok": true,
+    "sinon": true,
     "strictEqual": true,
     "define": true,
     "expect": true,
