--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
     "uglify-js": "^3.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-transform-modules-amd": "^7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/runtime": "^7.7.4",
     "@knappi/grunt-saucelabs": "^9.0.2",
     "aws-sdk": "^2.1.49",
-    "babel-loader": "^5.0.0",
-    "babel-runtime": "^5.1.10",
+    "babel-loader": "^8.0.6",
     "benchmark": "~1.0",
     "chai": "^4.2.0",
     "dirty-chai": "^2.0.1",
@@ -42,18 +47,16 @@
     "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-es5": "^1.4.1",
     "grunt": "^1.0.3",
-    "grunt-babel": "^5.0.0",
+    "grunt-babel": "^8.0.0",
     "grunt-bg-shell": "^2.3.3",
     "grunt-cli": "^1",
     "grunt-contrib-clean": "^1",
     "grunt-contrib-concat": "^1",
     "grunt-contrib-connect": "^1",
     "grunt-contrib-copy": "^1",
-    "grunt-contrib-requirejs": "^1",
-    "grunt-contrib-uglify": "^1",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-eslint": "^20.1.0",
-    "grunt-webpack": "^1.0.8",
+    "grunt-webpack": "^3.1.3",
     "istanbul": "^0.3.0",
     "jison": "~0.3.0",
     "mocha": "^5",
@@ -63,8 +66,8 @@
     "sinon": "^7.5.0",
     "typescript": "^3.4.3",
     "underscore": "^1.5.1",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^4.41.2",
+    "webpack-dev-server": "^3.9.0"
   },
   "main": "lib/index.js",
   "types": "types/index.d.ts",
