chore: configure prettier and eslint
- add prettier to do formatting
- add eslint-config-prettier to
  disable rules conflicting with prettier
- remove eslint from grunt workflow
- use lint-stage to lint and format
  on precommit
- use eslint and prettier in travis directly
- remove rules that are already part of
  the "recommended" ruleset

That rational is that eslint and prettier should be run in
Travis-CI, on commit and as IDE integration (highlighting
errors directlry). They don't need to be run along with
test-cases. Getting linting errors when running the tests
because of missing semicolons is just annoying, but doesn't
help the overall code-quality.

--- a/.prettierignore
+++ b/.prettierignore
@@ -6,8 +6,7 @@
 npm-debug.log
 sauce_connect.log*
 .idea
-/yarn-error.log
-/yarn.lock
+yarn-error.log
 node_modules
 /handlebars-release.tgz
 
@@ -16,3 +15,7 @@ lib/handlebars/compiler/parser.js
 /coverage/
 /dist/
 /integration-testing/*/dist/
+
+# Third-party or files that must remain unchanged
+/spec/expected/
+/spec/vendor
