--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 before_install:
 - npm install -g grunt-cli
 script:
+- npm run lint
+- npm run check-format
 - grunt --stack travis
 email:
   on_failure: change
