--- a/spec/.eslintrc
+++ b/spec/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": [
     "../.eslintrc.js",
-    "plugin:es5/no-es2015"
+    "plugin:es5/no-es2015",
+    "prettier"
   ],
   "plugins": [
     "es5"
