chore: restructure build commands
- move dtslint (checkTypes) away from Gruntfile.js
  (as it disturbs debugging `grunt`)
  and call it directly as npm-script in travis-ci
- re-group task definition in Gruntfile.js
- use a multi-job travis build to
  run linting, format, dtslint and tests
  in parallel
- run only "npm test" on appveyor
- rename Grunt-tasks for be more descriptive
- SAUCE_USERNAME is not a secret variable anymore
  it can be easily guessed anyway and the
  [secure] value messes up with a lot of the
  log output

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,7 @@ install:
   # Clone submodules (mustache spec)
   - cmd: git submodule update --init --recursive
   # Install modules
-  - cmd: npm install
-  - cmd: npm install -g grunt-cli
+  - cmd: npm ci
 
 
 # Post-install test scripts
@@ -23,7 +22,7 @@ test_script:
   - cmd: node --version
   - cmd: npm --version
   # Run tests
-  - cmd: grunt --stack travis
+  - cmd: npm run test
 
 # Don't actually build
 build: off
