--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,47 @@
 language: node_js
-before_install:
-- npm install -g grunt-cli
-script:
-- npm run lint
-- npm run check-format
-- grunt --stack travis
+
+jobs:
+  include:
+    - stage: test
+      name: "check javascript (eslint)"
+      node_js: lts/*
+      script: npm run lint
+
+    - stage: test
+      name: "check formatting (prettier)"
+      node_js: lts/*
+      script: npm run check-format
+
+    - stage: test
+      name: "check typescript definitions (dtslint)"
+      node_js: lts/*
+      script: npm run dtslint
+
+    - stage: test
+      name: "extensive tests and publish to aws"
+      script: npm run extensive-tests-and-publish-to-aws
+      env:
+        - S3_BUCKET_NAME=builds.handlebarsjs.com
+        - secure: ckyEe5dzjdFDjmZ6wIrhGm0CFBEnKq8c1dYptfgVV/Q5/nJFGzu8T0yTjouS/ERxzdT2H327/63VCxhFnLCRHrsh4rlW/rCy4XI3O/0TeMLgFPa4TXkO8359qZ4CB44TBb3NsJyQXNMYdJpPLTCVTMpuiqqkFFOr+6OeggR7ufA=
+        - secure: Nm4AgSfsgNB21kgKrF9Tl7qVZU8YYREhouQunFracTcZZh2NZ2XH5aHuSiXCj88B13Cr/jGbJKsZ4T3QS3wWYtz6lkyVOx3H3iI+TMtqhD9RM3a7A4O+4vVN8IioB2YjhEu0OKjwgX5gp+0uF+pLEi7Hpj6fupD3AbbL5uYcKg8=
+        - SAUCE_USERNAME=handlebars
+        - secure: yERYCf7AwL11D9uMtacly/THGV8BlzsMmrt+iQVvGA3GaY6QMmfYqf6P6cCH98sH5etd1Y+1e6YrPeMjqI6lyRllT7FptoyOdHulazQe86VQN4sc0EpqMlH088kB7gGjTut9Z+X9ViooT5XEh9WA5jXEI9pXhQJNoIHkWPuwGuY=
+      node_js: "10"
+
+    - stage: test
+      name: "test with latest nodejs-lts"
+      node_js: lts/*
+      script: npm run test
+
+    - stage: test
+      name: "test with active nodejs"
+      node_js: node
+      script: npm run test
+
+cache: npm
 email:
   on_failure: change
   on_success: never
-env:
-  global:
-  - S3_BUCKET_NAME=builds.handlebarsjs.com
-  - secure: ckyEe5dzjdFDjmZ6wIrhGm0CFBEnKq8c1dYptfgVV/Q5/nJFGzu8T0yTjouS/ERxzdT2H327/63VCxhFnLCRHrsh4rlW/rCy4XI3O/0TeMLgFPa4TXkO8359qZ4CB44TBb3NsJyQXNMYdJpPLTCVTMpuiqqkFFOr+6OeggR7ufA=
-  - secure: Nm4AgSfsgNB21kgKrF9Tl7qVZU8YYREhouQunFracTcZZh2NZ2XH5aHuSiXCj88B13Cr/jGbJKsZ4T3QS3wWYtz6lkyVOx3H3iI+TMtqhD9RM3a7A4O+4vVN8IioB2YjhEu0OKjwgX5gp+0uF+pLEi7Hpj6fupD3AbbL5uYcKg8=
-matrix:
-  include:
-  - node_js: '10'
-    env:
-    - PUBLISH=true
-    - secure: pLTzghtVll9yGKJI0AaB0uI8GypfWxLTaIB0ZL8//yN3nAEIKMhf/RRilYTsn/rKj2NUa7vt2edYILi3lttOUlCBOwTc9amiRms1W8Lwr/3IdWPeBLvLuH1zNJRm2lBAwU4LBSqaOwhGaxOQr6KHTnWudhNhgOucxpZfvfI/dFw=
-    - secure: yERYCf7AwL11D9uMtacly/THGV8BlzsMmrt+iQVvGA3GaY6QMmfYqf6P6cCH98sH5etd1Y+1e6YrPeMjqI6lyRllT7FptoyOdHulazQe86VQN4sc0EpqMlH088kB7gGjTut9Z+X9ViooT5XEh9WA5jXEI9pXhQJNoIHkWPuwGuY=
-cache:
-  directories:
-  - node_modules
 
 git:
   depth: 100
