--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-es5": "^1.4.1",
-    "grunt": "^1.0.3",
+    "grunt": "^1.0.4",
     "grunt-babel": "^5.0.0",
     "grunt-bg-shell": "^2.3.3",
     "grunt-cli": "^1",
@@ -57,12 +57,12 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-webpack": "^1.0.8",
     "husky": "^3.1.0",
-    "istanbul": "^0.3.0",
     "jison": "~0.3.0",
     "lint-staged": "^9.5.0",
     "mocha": "^5",
     "mock-stdin": "^0.3.0",
     "mustache": "^2.1.3",
+    "nyc": "^14.1.1",
     "prettier": "^1.19.1",
     "semver": "^5.0.1",
     "sinon": "^7.5.0",
